[gd_scene load_steps=3 format=3 uid="uid://t4ecqkc8ixhb"]

[ext_resource type="Script" path="res://código/opciones.gd" id="1_oor40"]
[ext_resource type="Texture2D" uid="uid://btwcdxhyu4n6q" path="res://imágenes/aesthetic-pixel-art-sunrise-kf0at2uqrnne56ir.jpg" id="2_si54n"]

[node name="Opciones" type="Node2D"]
position = Vector2(562, 297)
script = ExtResource("1_oor40")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -56.0
offset_top = -50.5
offset_right = 56.0
offset_bottom = 50.5

[node name="Instrucciones" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Instrucciones"

[node name="Volumen" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Volumen"

[node name="Créditos" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Créditos"

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
offset_left = -562.0
offset_top = -297.0
offset_right = 590.0
offset_bottom = 351.0
mouse_filter = 2
texture = ExtResource("2_si54n")
expand_mode = 1

[connection signal="pressed" from="VBoxContainer/Instrucciones" to="." method="_on_instrucciones_pressed"]
[connection signal="pressed" from="VBoxContainer/Volumen" to="." method="_on_volumen_pressed"]
[connection signal="pressed" from="VBoxContainer/Créditos" to="." method="_on_créditos_pressed"]
